--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
-pillow==10.1.0
-python-magic-bin==0.4.14
 aiofiles==23.2.1
-numpy==1.26.2
+pillow==10.1.0
+numpy==1.24.3
+torch==2.1.0
+torchvision==0.16.0
+opencv-python==4.8.1.78
+pydantic==2.4.2
