--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 aiofiles==23.2.1
 pillow==10.1.0
+
 numpy==1.24.3
+
 torch==2.1.0
 torchvision==0.16.0
-opencv-python==4.8.1.78
+
+opencv-python-headless==4.8.1.78
 pydantic==2.4.2
+
+requests==2.31.0
